Add . to directory path

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link type="text/css" href="/resources/css/style.css" rel="stylesheet">
+        <link type="text/css" href="./resources/css/style.css" rel="stylesheet">
         <title>Excursion</title>
     </head>
     <body>
@@ -9,12 +9,12 @@
         <a href="#">Download Excursion (Coming Soon)</a>
         <br>
         <video autoplay>
-            <source src="/resources/video/excursion.mp4" type="video/mp4">
+            <source src="./resources/video/excursion.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <h2>Your personal travel guide</h2>
         <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-        <img src="/resources/img/camp.jpg">
+        <img src="./resources/img/camp.jpg">
         <br>
         <img src="/resources/img/phone.png" id="phone">
         <h2>Coming Soon for iPhone and Android</h2>
