Add controls to video, fixed file path of phone img

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Discover hidden places in the world around you</h1>
         <a href="#">Download Excursion (Coming Soon)</a>
         <br>
-        <video autoplay>
+        <video autoplay controls>
             <source src="./resources/video/excursion.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
@@ -16,7 +16,7 @@
         <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
         <img src="./resources/img/camp.jpg">
         <br>
-        <img src="/resources/img/phone.png" id="phone">
+        <img src="./resources/img/phone.png" id="phone">
         <h2>Coming Soon for iPhone and Android</h2>
         <a href="#">Download Excursion (Coming Soon)</a>
         <h3 id="copyright">© Excursion</h3>
